--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,10 @@ body {
     font-family: "Ubuntu";
     letter-spacing: 0.05em;
 }
+a {
+    text-decoration: none;
+    color: #3282a1;
+}
 
 h3 {
     margin: 0 0 2em 0;
@@ -40,16 +44,6 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-a {
-    text-decoration: none;
-    color: #3282a1;
-    transition: 0.5s;
-}
-
-a:hover {
-    color: whitesmoke;
 }
 
 .navbar {
@@ -205,8 +199,19 @@ blockquote {
 
 #newest-post__button {
     cursor: pointer;
-
+    border: solid #3282a1 2px;
     text-align: center;
+    padding: 0.5em;
+    border-radius: 999px;
+    text-decoration: none;
+    color: #3282a1;
+    transition: 0.5s;
+    display: block;
+}
+
+#newest-post__button:hover {
+    border: solid white 2px;
+    color: white;
 }
 
 @keyframes fadeIn {
