--- a/styles.css
+++ b/styles.css
@@ -209,13 +209,19 @@ blockquote {
     border-radius: 999px;
     text-decoration: none;
     color: #3282a1;
-    transition: 0.5s;
-    display: block;
+    transition: 0.25s;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: auto;
 }
 
-#newest-post__button:hover {
-    border: solid white 2px;
+#newest-post__button:hover,
+#backToTop:hover {
+    /* border: solid white 2px; */
     color: white;
+    box-shadow: 0px 5px 15px black;
+    background: #3282a1;
 }
 
 @keyframes fadeIn {
@@ -258,4 +264,20 @@ i:hover {
     justify-content: space-around;
     height: 100%;
     width: 225px;
+}
+
+#backToTop {
+    display: none;
+    cursor: pointer;
+    border: solid #3282a1 2px;
+    text-align: center;
+    padding: 0.5em;
+    border-radius: 999px;
+    text-decoration: none;
+    color: #3282a1;
+    transition: 0.25s;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: auto;
 }
