--- a/styles.css
+++ b/styles.css
@@ -75,11 +75,10 @@ header {
 .grid-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 125px auto 50px 125px;
+    grid-template-rows: 125px auto  125px;
     grid-template-areas:
         "h h h h h h h h h h h h"
         "c c c c c c c c c c c c"
-        "s s s s s s s s s s s s "
         "f f f f f f f f f f f f";
     color: white;
     height: 100vh;
@@ -216,13 +215,15 @@ blockquote {
     margin: auto;
 }
 
-#newest-post__button:hover,
-#backToTop:hover {
+#newest-post__button:hover
+{
     /* border: solid white 2px; */
     color: white;
     box-shadow: 0px 5px 15px black;
     background: #3282a1;
 }
+
+
 
 @keyframes fadeIn {
     from {
@@ -269,15 +270,19 @@ i:hover {
 #backToTop {
     display: none;
     cursor: pointer;
-    border: solid #3282a1 2px;
+    /* border: solid #3282a1 2px; */
     text-align: center;
     padding: 0.5em;
     border-radius: 999px;
     text-decoration: none;
     color: #3282a1;
     transition: 0.25s;
-    display: flex;
+    
     justify-content: center;
     width: 100%;
     margin: auto;
+}
+
+#backToTop:hover {
+    color:white
 }
