--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,11 @@ header {
 
 .navbar__ul a {
     color: lightgoldenrodyellow;
+    transition: 0.5s;
+}
+
+.navbar__ul a:hover {
+    color: rgb(179, 65, 255);
 }
 
 /* this wraps all the main content */
@@ -156,7 +161,7 @@ header {
 .newest-post {
     margin-top: 3em;
     margin-bottom: 4em;
-    max-width: 75ch;
+    max-width: 80ch;
     padding: 3em 4em;
     background: rgba(33, 33, 33);
     border-radius: 5px;
