--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-family: "Ubuntu";
     letter-spacing: 0.05em;
 }
@@ -27,7 +27,8 @@ a {
 }
 
 p {
-    text-indent: 2.3em;
+    text-indent: 1.5em;
+    line-height: 1.6;
 }
 
 h3 {
@@ -124,6 +125,10 @@ header {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.582);
 }
 
+#hamburger {
+    display: none;
+}
+
 .navbar__ul {
     display: flex;
     width: 50%;
@@ -151,11 +156,6 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-.post-container p {
-    line-height: 1.6;
-    font-size: 2rem;
 }
 
 .newest-post {
@@ -278,4 +278,57 @@ i {
 i:hover {
     /* transform: scale(230%); */
     color: #3282a1;
+}
+
+/* ==============
+                                                                  media queries
+                                                                ================ */
+@media only screen and (max-width: 1000px) {
+    .navbar {
+        display: flex;
+        width: 50px;
+        justify-content: center;
+        background: #316579;
+        position: sticky;
+        top: 0;
+        z-index: 999;
+        color: lightgoldenrodyellow;
+        padding: 0.3em;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.582);
+    }
+
+    .navbar__ul {
+        display: none;
+    }
+
+    #hamburger {
+        display: block;
+    }
+
+    .newest-post {
+        padding: 1em;
+    }
+
+    #backToTop {
+        margin: initial;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 414px) {
+    p {
+        font-size: 1.5rem;
+    }
+
+    .post-container {
+        padding: 0;
+    }
+    .newest-post__h2 {
+        font-size: 2.2rem;
+    }
+
+    .newest-post iframe {
+        width: auto;
+        height: 200px;
+    }
 }
