--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ h3 {
 blockquote {
     line-height: 1.4;
     font-size: 2rem;
+    font-style: italic;
     background: rgba(0, 0, 0, 0.582);
     padding: 1em;
 }
@@ -332,5 +333,17 @@ i:hover {
     .newest-post iframe {
         width: auto;
         height: 200px;
+    }
+
+    blockquote {
+        font-size: 1.5rem;
+        margin: 0.5em;
+    }
+
+    .header {
+        background: rgb(4, 4, 4);
+    }
+    .header__logo {
+        background: rgb(4, 4, 4);
     }
 }
