--- a/styles.css
+++ b/styles.css
@@ -296,8 +296,9 @@ i:hover {
         top: 0;
         z-index: 999;
         color: lightgoldenrodyellow;
-        padding: 0.3em;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.582);
+        padding: .1em;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.644);
+        border-radius:0 2px 2px 0;
     }
 
     .navbar__ul {
@@ -306,6 +307,8 @@ i:hover {
 
     #hamburger {
         display: block;
+        
+        
     }
 
     .newest-post {
@@ -319,12 +322,22 @@ i:hover {
 }
 
 @media only screen and (max-width: 414px) {
+    
+    .grid-container {
+        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: 100px auto 125px; 
+    }
+    
+    
     p {
         font-size: 1.5rem;
     }
 
     .post-container {
         padding: 0;
+    }
+    .newest-post {
+        margin-top:1em;
     }
     .newest-post__h2 {
         font-size: 2.2rem;
