--- a/styles.css
+++ b/styles.css
@@ -321,6 +321,8 @@ i:hover {
     }
 }
 
+
+/* media queries for iphone 8 / 9 / 10  */
 @media only screen and (max-width: 414px) {
     
     .grid-container {
