--- a/styles.css
+++ b/styles.css
@@ -293,7 +293,7 @@ i:hover {
         justify-content: center;
         background: #316579;
         position: fixed;
-        top: 0;
+        top: 35px;
         z-index: 999;
         color: lightgoldenrodyellow;
         padding: .1em;
@@ -323,6 +323,7 @@ i:hover {
         /* left:-300px; */
         width:300px;
         height:100%;
+        top:0;
     }
 
     #hamburger.reveal {
@@ -337,6 +338,7 @@ i:hover {
         position:relative;
         color:white;
         right:0; 
+        cursor: pointer;
     }
 
     .darken {
