--- a/styles.css
+++ b/styles.css
@@ -434,7 +434,9 @@ i:hover {
     }
 }
 
-/* light theme */
+/*=============
+                                                      light theme 
+                                                     ============= */
 
 .grid-item-2.light-theme {
     grid-area: c;
