--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+:root {
+    --clr-primary: #3282a1;
+    --clr-links: lightgoldenrodyellow;
+}
+
 html {
     height: 100%;
     margin: 0;
@@ -24,7 +29,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #3282a1;
+    color: var(--clr-primary);
 }
 
 p {
@@ -121,7 +126,6 @@ header {
     position: sticky;
     top: 0;
     z-index: 999;
-    color: lightgoldenrodyellow;
     padding: 0.3em;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.582);
 }
@@ -148,7 +152,7 @@ header {
 }
 
 .navbar__ul a {
-    color: lightgoldenrodyellow;
+    color: var(--clr-links);
     transition: 0.5s;
 }
 
@@ -199,12 +203,12 @@ header {
 
 #newest-post__button {
     cursor: pointer;
-    border: solid #3282a1 2px;
+    border: solid var(--clr-primary) 2px;
     text-align: center;
     padding: 0.5em;
     border-radius: 999px;
     text-decoration: none;
-    color: #3282a1;
+    color: var(--clr-primary);
     transition: 0.25s;
     display: flex;
     justify-content: center;
@@ -288,7 +292,7 @@ i {
 
 i:hover {
     /* transform: scale(230%); */
-    color: #3282a1;
+    color: var(--clr-primary);
 }
 
 /* ==============
@@ -442,8 +446,8 @@ i:hover {
     grid-area: c;
     height: 100%;
     background: linear-gradient(
-            rgba(255, 255, 255, 0.877),
-            rgba(255, 255, 255, 0.733)
+            rgba(255, 255, 255, 0.911),
+            rgba(255, 255, 255, 0.808)
         ),
         url(images/carbonfiber.png);
     background-size: cover;
@@ -455,7 +459,7 @@ i:hover {
 .navbar.light-theme {
     background: #316579;
 
-    color: lightgoldenrodyellow;
+    color: var(--clr-links);
 
     box-shadow: none;
     border-radius: 0 2px 2px 0;
@@ -465,13 +469,20 @@ i:hover {
 .header.light-theme {
     display: flex;
     justify-content: center;
-    background: #3282a1;
+    background: linear-gradient(
+            rgba(50, 129, 161, 0.822),
+            rgba(50, 129, 161, 0.692)
+        ),
+        url(images/carbonfiber.png);
+
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .header__logo.light-theme {
     height: 100%;
     width: 100px;
-    background: #3282a1;
+    background: var(--clr-primary);
 }
 
 .newest-post.light-theme {
