--- a/styles.css
+++ b/styles.css
@@ -267,7 +267,7 @@ header {
 .grid-item-3 {
     grid-area: f;
 
-    background: rgba(33, 33, 33, 0.5);
+    background: rgb(33, 33, 33);
 }
 
 .footer {
@@ -501,3 +501,23 @@ i:hover {
 .footer.light-theme {
     background: #316579;
 }
+
+/* =========
+                                                 404 page 
+                                                ==========*/
+
+.error-message {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.home {
+    margin-top: 1em;
+    font-size: 2.5rem;
+}
+
+/* the styles for the exclamation icon are in the html */
