--- a/styles.css
+++ b/styles.css
@@ -507,6 +507,7 @@ i:hover {
                                                 ==========*/
 
 .error-message {
+    background: rgba(0, 0, 0, 0.897);
     width: 100%;
     height: 100%;
     display: flex;
@@ -518,6 +519,7 @@ i:hover {
 .home {
     margin-top: 1em;
     font-size: 2.5rem;
+    color: rgb(255, 183, 49);
 }
 
 /* the styles for the exclamation icon are in the html */
