--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,8 @@ i:hover {
     }
 
     p {
-        font-size: 1.5rem;
+        font-size: 1.6rem;
+        line-height: 2;
     }
 
     .post-container {
@@ -405,6 +406,7 @@ i:hover {
     }
     .newest-post {
         margin-top: 0;
+        padding: 0.5em;
     }
     .newest-post__h2 {
         font-size: 2.2rem;
