i added light theme button back for now

--- a/styles.css
+++ b/styles.css
@@ -340,8 +340,7 @@ i:hover {
     }
 
     .theme {
-        bottom: 55px;
-        left: 100px;
+        position: initial;
     }
 
     .navbar__ul.reveal {
