--- a/styles.css
+++ b/styles.css
@@ -439,6 +439,7 @@ i:hover {
     }
     .newest-post__h2 {
         font-size: 2.2rem;
+        margin: 1em 0 0.5em 0;
     }
 
     .newest-post iframe {
