--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,22 @@
+/* ===============
+                                                               
+
+                                                             1/HEADER - grid area: h
+
+                                                             2/MAIN CONTENT - grid area: c
+
+                                                             3/FOOTER - grid area: f
+
+                                                             4/ANIMATIONS
+
+                                                             5/MEDIA QUERIES
+
+                                                             6/LIGHT THEME
+
+                                                             404 PAGE
+
+                                                            =================*/
+
 :root {
     --clr-primary: #3282a1;
     --clr-accent: #316579;
@@ -30,11 +49,8 @@ body {
     letter-spacing: 0.05em;
 }
 
-
-
 a {
     text-decoration: none;
-   
 }
 
 p {
@@ -74,11 +90,8 @@ blockquote {
                                                                  HEADER - grid area: h
                                                                 =======================*/
 
-
-
 .grid-item-1 {
     grid-area: h;
-   
 }
 
 .header {
@@ -126,15 +139,13 @@ blockquote {
     display: flex;
     width: 100%;
     justify-content: center;
-    background:var(--clr-nav);
+    background: var(--clr-nav);
     position: sticky;
     top: 0;
     z-index: 999;
     padding: 0.3em;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.616);
 }
-
-
 
 #hamburger {
     display: none;
@@ -156,18 +167,18 @@ blockquote {
     list-style-type: none;
 }
 
-
 /* these are the IDs for the theme/mode icon */
 #modeToggleDesktop,
 #modeToggleMobile {
     color: lightskyblue;
     cursor: pointer;
-    transition:1s;
+    transition: 1s;
 }
 
-#modeToggleDesktop.light-theme, #modeToggleMobile.light-theme {
+#modeToggleDesktop.light-theme,
+#modeToggleMobile.light-theme {
     color: var(--clr-links);
-    transform:rotate(180deg);
+    transform: rotate(180deg);
 }
 
 .navbar__ul a {
@@ -181,7 +192,6 @@ blockquote {
 
 /* this wraps all the main content */
 .post-container {
-    
     width: 100%;
     padding: 1em;
     display: flex;
@@ -209,9 +219,8 @@ blockquote {
 }
 
 .newest-post__h3 {
-    color:var(--clr-primary);
+    color: var(--clr-primary);
 }
-
 
 .newest-post iframe {
     width: 100%;
@@ -238,8 +247,6 @@ blockquote {
     background: #3282a1;
 }
 
-
-
 /* when the "read more" button is clicked, the .show class is toggled on or off */
 .newest-post--hidden {
     display: none;
@@ -249,8 +256,7 @@ blockquote {
     display: block;
 }
 
-
-
+/* this is the link at the bottom of the newest post that closes the article and sends you to top of page */
 #backToTop {
     display: none;
     cursor: pointer;
@@ -270,17 +276,6 @@ blockquote {
 #backToTop:hover {
     color: white;
 }
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-
 
 /* ========================
                                                                footer - grid area: f
@@ -317,9 +312,22 @@ i:hover {
     color: var(--clr-primary);
 }
 
+/*========= 
+                                                                   animations 
+                                                                 =============*/
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 /* ==============
                                                                   media queries
-                                                                ================ */
+                                                                 ================ */
 @media only screen and (max-width: 1000px) {
     .navbar {
         display: flex;
@@ -345,7 +353,6 @@ i:hover {
         display: flex;
     }
 
-
     /* this moves the theme picker icon back into the normal document flow */
     .theme {
         position: initial;
@@ -354,7 +361,6 @@ i:hover {
     .newest-post {
         padding: 1em;
     }
-
 
     /* this is the navbar for mobile that gets revealed when switching to mobile sizes */
     .navbar__ul.reveal {
@@ -408,7 +414,6 @@ i:hover {
         width: 100%;
     }
 
-  
     #backToTop {
         margin: initial;
         width: 100%;
@@ -544,7 +549,7 @@ i:hover {
 }
 
 .error-message.light-theme {
-    background:white;
+    background: white;
     width: 100%;
     height: 100%;
     display: flex;
@@ -556,8 +561,6 @@ i:hover {
 /* =========
                                                  404 page 
                                                 ==========*/
-
-
 
 /* the styles for the exclamation icon are in the html */
 
@@ -574,7 +577,5 @@ i:hover {
 .home {
     margin-top: 1em;
     font-size: 2.5rem;
-    color:rgb(248, 58, 0)
+    color: rgb(248, 58, 0);
 }
-
-
