--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,8 @@ body {
     height: 100vh;
     margin: 0;
     padding: 0;
-    font-size: 1.8rem;
-    font-family: "Ubuntu";
+    font-size: 2rem;
+    font-family: "Ubuntu", sans-serif;
     letter-spacing: 0.05em;
 }
 
@@ -54,8 +54,8 @@ a {
 }
 
 p {
-    text-indent: 1.5em;
-    line-height: 1.6;
+    /* text-indent: 1.5em; */
+    line-height: 2;
 }
 
 h3 {
@@ -442,7 +442,7 @@ i:hover {
     }
     .newest-post {
         margin-top: 0;
-        padding: 0.5em;
+        padding: 0.75em;
     }
     .newest-post__h2 {
         font-size: 2.2rem;
